--- a/softuni-practice-server-master/settings.json
+++ b/softuni-practice-server-master/settings.json
@@ -315,7 +315,23 @@
                 "_id": "a9bae6d8-793e-46c4-a9db-deb9e3484909"
             }
         },
-        "likes": {},
+        "likes": {
+            "1d44951c-65a8-447c-b0e3-a81d499b0345": {
+                "_ownerId": "b536feb1-b831-4678-9642-c9fd8890595e",
+                "id": "05b6c98b-79e4-4e9d-9e18-25dcbd811103",
+                "_createdOn": 1712858506223
+            },
+            "2d44951c-65a8-447c-b0e3-a81d499b0345": {
+                "_ownerId": "a536feb1-b831-4678-9642-c9fd8890595e",
+                "id": "05b6c98b-79e4-4e9d-9e18-25dcbd811103",
+                "_createdOn": 1712858506227
+            },
+            "360c430d-5001-4300-8f77-c9bca6f216d7": {
+                "_ownerId": "f62c7c43-e5d3-40ef-8fe1-14a5972bf4d9",
+                "id": "9798b529-7788-43af-ad5f-653f8f070f99",
+                "_createdOn": 1712858771707
+            }
+        },
         "ideas": {
             "833e0e57-71dc-42c0-b387-0ce0caf5225e": {
                 "_ownerId": "847ec027-f659-4086-8032-5173e2f9c93a",
