--- a/softuni-practice-server-master/settings.json
+++ b/softuni-practice-server-master/settings.json
@@ -115,7 +115,7 @@
             "ed3c1ce3-794b-419d-bf8d-c21a2181ec5b": {
                 "_ownerId": "eed55395-ac4f-45a9-a4f1-20bdaad121b2",
                 "game_name": "Age of Empires II",
-                "game_img": "https://upload.wikimedia.org/wikipedia/en/5/56/Age_of_Empires_II_-_The_Age_of_Kings_Coverart.png",
+                "game_img": "https://i.pinimg.com/564x/a7/b1/03/a7b103ea37d628de5f6066127d612d3b.jpg",
                 "description": "\"Age of Empires II\" is a real-time strategy game developed by Ensemble Studios and published by Microsoft. Players build and manage civilizations from the Dark Ages through the Imperial Age, constructing buildings, training armies, and engaging in battles. The game offers single-player campaigns, skirmishes against AI opponents, and multiplayer matches.",
                 "genre": "Strategy",
                 "price": 19.99,
